documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int HCARD;
typedef int ERRVAL;

/**
*
*  CM429-1 Driver functions.
*
**/

C41W32API ULONG __stdcall C41_AsciiFrom(LPCSTR asciistr,INT radixval);

C41W32API VOID __stdcall C41_AsciiTo(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

C41W32API ULONG __stdcall C41_BCDGetData(ULONG msg,USHORT msb,USHORT lsb);

C41W32API ULONG __stdcall C41_BCDGetMant(ULONG msg,USHORT sigdig);

C41W32API USHORT __stdcall C41_BCDGetSign(ULONG msg);

C41W32API USHORT __stdcall C41_BCDGetSSM(ULONG msg);

C41W32API VOID __stdcall C41_BCDGetVal(LPSTR buf,ULONG msg,USHORT sigdig,LPCSTR resolstr);

C41W32API ULONG __stdcall C41_BCDPutData(ULONG msg,ULONG value,USHORT msb,USHORT lsb);

C41W32API ULONG __stdcall C41_BCDPutMant(ULONG msg,ULONG value,USHORT sigdig,USHORT sign);

C41W32API ULONG __stdcall C41_BCDPutSign(ULONG msg,USHORT sign);

C41W32API ULONG __stdcall C41_BCDPutSSM(ULONG msg,USHORT value);

C41W32API ULONG __stdcall C41_BCDPutVal(LPCSTR buf,ULONG msg,USHORT sigdig,LPCSTR resolstr);

C41W32API ULONG __stdcall C41_BNRGetData(ULONG msg,USHORT msb,USHORT lsb);

C41W32API ULONG __stdcall C41_BNRGetMant(ULONG msg,USHORT sigbit);

C41W32API USHORT __stdcall C41_BNRGetSign(ULONG msg);

C41W32API USHORT __stdcall C41_BNRGetSSM(ULONG msg);

C41W32API VOID __stdcall C41_BNRGetVal(LPSTR buf,ULONG msg,USHORT sigbit,LPCSTR resolstr);

C41W32API ULONG __stdcall C41_BNRPutData(ULONG msg,ULONG value,USHORT msb,USHORT lsb);

C41W32API ULONG __stdcall C41_BNRPutMant(ULONG msg,ULONG value,USHORT sigbit,USHORT twos);

C41W32API ULONG __stdcall C41_BNRPutSign(ULONG msg,USHORT twos);

C41W32API ULONG __stdcall C41_BNRPutSSM(ULONG msg,USHORT value);

C41W32API ULONG __stdcall C41_BNRPutVal(LPCSTR buf,ULONG msg,USHORT sigbit,LPCSTR resolstr);

C41W32API INT __stdcall C41_ChCheck(INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_ChClear(INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_ChConfig(ULONG configval,INT channum,HCARD handleval);

C41W32API VOID __stdcall C41_ChPause(INT channum,HCARD handleval);

C41W32API VOID __stdcall C41_ChResume(INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_CloseAll(VOID);

C41W32API ERRVAL __stdcall C41_CloseCard(HCARD handleval);

C41W32API INT __stdcall C41_ExtRd(HCARD handleval);

C41W32API VOID __stdcall C41_ExtWr(INT extflag,HCARD handleval);

C41W32API ERRVAL __stdcall C41_FilterDefault(INT msgnum,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_FilterSet(INT labelval,INT sdimask,INT msgnum,INT channum,HCARD handleval);

C41W32API ULONG __stdcall C41_FldGetData(ULONG msgval);

C41W32API USHORT __stdcall C41_FldGetLabel(ULONG msgval);

C41W32API USHORT __stdcall C41_FldGetParity(ULONG msgval);

C41W32API USHORT __stdcall C41_FldGetSDI(ULONG msgval);

C41W32API ULONG __stdcall C41_FldGetValue(ULONG msgval,USHORT startbit,USHORT endbit);

C41W32API ULONG __stdcall C41_FldPutData(ULONG msgval,ULONG data);

C41W32API ULONG __stdcall C41_FldPutLabel(ULONG msgval,USHORT label);

C41W32API ULONG __stdcall C41_FldPutSDI(ULONG msgval,USHORT sdi);

C41W32API ULONG __stdcall C41_FldPutValue(ULONG msgval,ULONG dataval,USHORT startbit,USHORT endbit);

C41W32API ERRVAL __stdcall C41_IntDin(HCARD handleval);

C41W32API USHORT __stdcall C41_IntRd(LPUSHORT typeval,LPUSHORT infoval,HCARD handleval);

C41W32API USHORT __stdcall C41_ListMakeRcv(USHORT count,INT msgnum,HCARD handleval);

C41W32API USHORT __stdcall C41_ListMakeXmt(USHORT count,INT channum,HCARD handleval);

C41W32API USHORT __stdcall C41_ListRd(LPULONG msgval,USHORT listaddr,HCARD handleval);

C41W32API ERRVAL __stdcall C41_ListStatus(USHORT listaddr,HCARD handleval);

C41W32API USHORT __stdcall C41_ListWr(ULONG msgval,USHORT listaddr,HCARD handleval);

C41W32API USHORT __stdcall C41_MemPeek(USHORT addrval,HCARD handleval);

C41W32API VOID __stdcall C41_MemPoke(USHORT value,USHORT addrval,HCARD handleval);

C41W32API ULONG __stdcall C41_MsgArincRd(INT msgnum,HCARD handleval);

C41W32API VOID __stdcall C41_MsgArincWr(ULONG msgval,INT msgnum,HCARD handleval);

C41W32API USHORT __stdcall C41_MsgBlockRd(LPUSHORT valueptr,INT msgnum,HCARD handleval);

C41W32API USHORT __stdcall C41_MsgBlockWr(LPUSHORT valueptr,INT msgnum,HCARD handleval);

C41W32API USHORT __stdcall C41_MsgCommRd(LPUSHORT valueptr,INT msgnum,HCARD handleval);

C41W32API USHORT __stdcall C41_MsgCommWr(LPUSHORT valueptr,INT msgnum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgConfig(USHORT configval,INT msgnum,HCARD handleval);

C41W32API ULONG __stdcall C41_MsgEncoderRd(INT msgnum,HCARD handleval);

C41W32API VOID __stdcall C41_MsgEncoderWr(ULONG msgval,INT msgnum,HCARD handleval);

C41W32API HCARD __stdcall C41_OpenCard(INT cardnum);

C41W32API VOID __stdcall C41_Reset(HCARD handleval);

C41W32API VOID __stdcall C41_Restart(HCARD handleval);

C41W32API INT __stdcall C41_SchedBranch(INT schindex,INT condition,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedBuild(INT basemsgnum,USHORT nummsgs,LPINT minperiod,LPINT maxperiod,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedCall(INT schindex,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedGap(USHORT gapval,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedHalt(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedInt(USHORT tagval,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedMsg(INT msgnum,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedPause(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedPulse(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedRestart(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedRet(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedStart(INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SelfTest(HCARD handleval);

C41W32API ERRVAL __stdcall C41_SeqClear(HCARD handleval);

C41W32API ERRVAL __stdcall C41_SeqConfig(USHORT configval,INT interval,INT cardnum,HCARD handleval);