documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32NET.VB


    Public Declare Function C41_AsciiFrom Lib "C41W32.DLL" Alias "_C41_AsciiFrom@8" (ByRef asciistr As String, ByVal radixval As Int32) As UInt32
    Public Declare Sub C41_AsciiTo Lib "C41W32.DLL" Alias "_C41_AsciiTo@16" (ByVal value As UInt32, ByRef asciistr As String, ByVal numbits As Int32, ByVal radixval As Int32)
    Public Declare Function C41_BCDGetData Lib "C41W32.DLL" Alias "_C41_BCDGetData@12" (ByVal msg As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
    Public Declare Function C41_BCDGetMant Lib "C41W32.DLL" Alias "_C41_BCDGetMant@8" (ByVal msg As UInt32, ByVal sigdig As UInt16) As UInt32
    Public Declare Function C41_BCDGetSign Lib "C41W32.DLL" Alias "_C41_BCDGetSign@4" (ByVal msg As UInt32) As UInt16
    Public Declare Function C41_BCDGetSSM Lib "C41W32.DLL" Alias "_C41_BCDGetSSM@4" (ByVal msg As UInt32) As UInt16
    Public Declare Sub C41_BCDGetVal Lib "C41W32.DLL" Alias "_C41_BCDGetVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigdig As UInt16, ByRef resolstr As String)
    Public Declare Function C41_BCDPutData Lib "C41W32.DLL" Alias "_C41_BCDPutData@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
    Public Declare Function C41_BCDPutMant Lib "C41W32.DLL" Alias "_C41_BCDPutMant@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal sigdig As UInt16, ByVal sign As UInt16) As UInt32
    Public Declare Function C41_BCDPutSign Lib "C41W32.DLL" Alias "_C41_BCDPutSign@8" (ByVal msg As UInt32, ByVal sign As UInt16) As UInt32
    Public Declare Function C41_BCDPutSSM Lib "C41W32.DLL" Alias "_C41_BCDPutSSM@8" (ByVal msg As UInt32, ByVal value As UInt16) As UInt32
    Public Declare Function C41_BCDPutVal Lib "C41W32.DLL" Alias "_C41_BCDPutVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigdig As UInt16, ByRef resolstr As String) As UInt32
    Public Declare Function C41_BNRGetData Lib "C41W32.DLL" Alias "_C41_BNRGetData@12" (ByVal msg As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
    Public Declare Function C41_BNRGetMant Lib "C41W32.DLL" Alias "_C41_BNRGetMant@8" (ByVal msg As UInt32, ByVal sigbit As UInt16) As UInt32
    Public Declare Function C41_BNRGetSign Lib "C41W32.DLL" Alias "_C41_BNRGetSign@4" (ByVal msg As UInt32) As UInt16
    Public Declare Function C41_BNRGetSSM Lib "C41W32.DLL" Alias "_C41_BNRGetSSM@4" (ByVal msg As UInt32) As UInt16
    Public Declare Sub C41_BNRGetVal Lib "C41W32.DLL" Alias "_C41_BNRGetVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigbit As UInt16, ByRef resolstr As String)
    Public Declare Function C41_BNRPutData Lib "C41W32.DLL" Alias "_C41_BNRPutData@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
    Public Declare Function C41_BNRPutMant Lib "C41W32.DLL" Alias "_C41_BNRPutMant@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal sigbit As UInt16, ByVal twos As UInt16) As UInt32
    Public Declare Function C41_BNRPutSign Lib "C41W32.DLL" Alias "_C41_BNRPutSign@8" (ByVal msg As UInt32, ByVal twos As UInt16) As UInt32
    Public Declare Function C41_BNRPutSSM Lib "C41W32.DLL" Alias "_C41_BNRPutSSM@8" (ByVal msg As UInt32, ByVal value As UInt16) As UInt32
    Public Declare Function C41_BNRPutVal Lib "C41W32.DLL" Alias "_C41_BNRPutVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigbit As UInt16, ByRef resolstr As String) As UInt32
    Public Declare Function C41_ChCheck Lib "C41W32.DLL" Alias "_C41_ChCheck@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_ChClear Lib "C41W32.DLL" Alias "_C41_ChClear@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_ChConfig Lib "C41W32.DLL" Alias "_C41_ChConfig@12" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub C41_ChPause Lib "C41W32.DLL" Alias "_C41_ChPause@8" (ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Sub C41_ChResume Lib "C41W32.DLL" Alias "_C41_ChResume@8" (ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function C41_CloseAll Lib "C41W32.DLL" Alias "_C41_CloseAll@0" () As Int32
    Public Declare Function C41_CloseCard Lib "C41W32.DLL" Alias "_C41_CloseCard@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_ExtRd Lib "C41W32.DLL" Alias "_C41_ExtRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub C41_ExtWr Lib "C41W32.DLL" Alias "_C41_ExtWr@8" (ByVal extflag As Int32, ByVal handleval As UInt32)
    Public Declare Function C41_FilterDefault Lib "C41W32.DLL" Alias "_C41_FilterDefault@12" (ByVal msgnum As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_FilterSet Lib "C41W32.DLL" Alias "_C41_FilterSet@20" (ByVal labelval As Int32, ByVal sdimask As Int32, ByVal msgnum As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_FldGetData Lib "C41W32.DLL" Alias "_C41_FldGetData@4" (ByVal msgval As UInt32) As UInt32
    Public Declare Function C41_FldGetLabel Lib "C41W32.DLL" Alias "_C41_FldGetLabel@4" (ByVal msgval As UInt32) As UInt16
    Public Declare Function C41_FldGetParity Lib "C41W32.DLL" Alias "_C41_FldGetParity@4" (ByVal msgval As UInt32) As UInt16
    Public Declare Function C41_FldGetSDI Lib "C41W32.DLL" Alias "_C41_FldGetSDI@4" (ByVal msgval As UInt32) As UInt16
    Public Declare Function C41_FldGetValue Lib "C41W32.DLL" Alias "_C41_FldGetValue@12" (ByVal msgval As UInt32, ByVal startbit As UInt16, ByVal endbit As UInt16) As UInt32
    Public Declare Function C41_FldPutData Lib "C41W32.DLL" Alias "_C41_FldPutData@8" (ByVal msgval As UInt32, ByVal data As UInt32) As UInt32
    Public Declare Function C41_FldPutLabel Lib "C41W32.DLL" Alias "_C41_FldPutLabel@8" (ByVal msgval As UInt32, ByVal label As UInt16) As UInt32
    Public Declare Function C41_FldPutSDI Lib "C41W32.DLL" Alias "_C41_FldPutSDI@8" (ByVal msgval As UInt32, ByVal sdi As UInt16) As UInt32
    Public Declare Function C41_FldPutValue Lib "C41W32.DLL" Alias "_C41_FldPutValue@16" (ByVal msgval As UInt32, ByVal dataval As UInt32, ByVal startbit As UInt16, ByVal endbit As UInt16) As UInt32
    Public Declare Function C41_IntDin Lib "C41W32.DLL" Alias "_C41_IntDin@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_IntRd Lib "C41W32.DLL" Alias "_C41_IntRd@12" (ByRef typevalval As UInt16, ByRef infoval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_ListMakeRcv Lib "C41W32.DLL" Alias "_C41_ListMakeRcv@12" (ByVal count As UInt16, ByVal msgnum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_ListMakeXmt Lib "C41W32.DLL" Alias "_C41_ListMakeXmt@12" (ByVal count As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_ListRd Lib "C41W32.DLL" Alias "_C41_ListRd@12" (ByRef msgval As UInt32, ByVal listaddr As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_ListStatus Lib "C41W32.DLL" Alias "_C41_ListStatus@8" (ByVal listaddr As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_ListWr Lib "C41W32.DLL" Alias "_C41_ListWr@12" (ByVal msgval As UInt32, ByVal listaddr As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_MemPeek Lib "C41W32.DLL" Alias "_C41_MemPeek@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C41_MemPoke Lib "C41W32.DLL" Alias "_C41_MemPoke@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C41_MsgArincRd Lib "C41W32.DLL" Alias "_C41_MsgArincRd@8" (ByVal msgnum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub C41_MsgArincWr Lib "C41W32.DLL" Alias "_C41_MsgArincWr@12" (ByVal msgval As UInt32, ByVal msgnum As Int32, ByVal handleval As UInt32)
    Public Declare Function C41_MsgBlockRd Lib "C41W32.DLL" Alias "_C41_MsgBlockRd@12" (ByRef valueptr As UInt16, ByVal msgnum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_MsgBlockWr Lib "C41W32.DLL" Alias "_C41_MsgBlockWr@12" (ByRef valueptr As UInt16, ByVal msgnum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_MsgCommRd Lib "C41W32.DLL" Alias "_C41_MsgCommRd@12" (ByRef valueptr As UInt16, ByVal msgnum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_MsgCommWr Lib "C41W32.DLL" Alias "_C41_MsgCommWr@12" (ByRef valueptr As UInt16, ByVal msgnum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_MsgConfig Lib "C41W32.DLL" Alias "_C41_MsgConfig@12" (ByVal configval As UInt16, ByVal msgnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_MsgEncoderRd Lib "C41W32.DLL" Alias "_C41_MsgEncoderRd@8" (ByVal msgnum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub C41_MsgEncoderWr Lib "C41W32.DLL" Alias "_C41_MsgEncoderWr@12" (ByVal msgval As UInt32, ByVal msgnum As Int32, ByVal handleval As UInt32)
    Public Declare Function C41_OpenCard Lib "C41W32.DLL" Alias "_C41_OpenCard@4" (ByVal cardnum As Int32) As UInt32
    Public Declare Sub C41_Reset Lib "C41W32.DLL" Alias "_C41_Reset@4" (ByVal handleval As UInt32)
    Public Declare Sub C41_Restart Lib "C41W32.DLL" Alias "_C41_Restart@4" (ByVal handleval As UInt32)
    Public Declare Function C41_SchedBranch Lib "C41W32.DLL" Alias "_C41_SchedBranch@16" (ByVal schindex As Int32, ByVal condition As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedBuild Lib "C41W32.DLL" Alias "_C41_SchedBuild@24" (ByVal basevalmsgnum As Int32, ByVal nummsgs As UInt16, ByRef minperiod As Int32, ByRef maxperiod As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedCall Lib "C41W32.DLL" Alias "_C41_SchedCall@12" (ByVal schindex As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedGap Lib "C41W32.DLL" Alias "_C41_SchedGap@12" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedHalt Lib "C41W32.DLL" Alias "_C41_SchedHalt@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedInt Lib "C41W32.DLL" Alias "_C41_SchedInt@12" (ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedMsg Lib "C41W32.DLL" Alias "_C41_SchedMsg@12" (ByVal msgnum As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedPause Lib "C41W32.DLL" Alias "_C41_SchedPause@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedPulse Lib "C41W32.DLL" Alias "_C41_SchedPulse@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedRestart Lib "C41W32.DLL" Alias "_C41_SchedRestart@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedRet Lib "C41W32.DLL" Alias "_C41_SchedRet@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedStart Lib "C41W32.DLL" Alias "_C41_SchedStart@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SelfTest Lib "C41W32.DLL" Alias "_C41_SelfTest@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SeqClear Lib "C41W32.DLL" Alias "_C41_SeqClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SeqConfig Lib "C41W32.DLL" Alias "_C41_SeqConfig@16" (ByVal configval As UInt16, ByVal interval As Int32, ByVal cardnum As Int32, ByVal handleval As UInt32) As Int32
